@@ -79,6 +79,9 @@ dpkg (1.17.7) UNRELEASED; urgency=low
     - Test command_exec() exit code.
     - Test allocations with new test_alloc() instead of pass/fail macros.
     - Switch C test suite to use TAP.
+  * Add support for Packages-files in dpkg --update-avail and --merge-avail
+    from pipes, or standard input if the argument is omitted or is ‘-’.
+    Closes: #357093, #367297
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
